--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christian Roberto - Full Stack Developer</title>
+    <title>Christian - Full Stack Developer</title>
     <meta
         name="description"
         content="Full stack developer from modern/creative websites."
     />
     <meta
         name="keywords"
-        content="christian roberto, web development, ecommerce"
+        content="christian roberto, web development, ecommerce, javascript, "
     />
     <meta
         name="author"
@@ -38,6 +38,8 @@
     <script src="assets/js/config.js"></script>
 </head>
 <body>
-    Welcome Bienvenido
+    <img src="assets/images/Blog_Generico_compressed.JPG" alt="Blog with html and css">
+    <img src="assets/images/baby_yoda_compressed.JPG" alt="Grogu with css only">
+    <img src="assets/images/Blackjack_compressed.JPG" alt="21 blackjack game with javascript">
 </body>
 </html>
