--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,6 @@
     <script src="assets/js/config.js"></script>
 </head>
 <body>
-    <img src="assets/images/Blog_Generico_compressed.JPG" alt="Blog with html and css">
-    <img src="assets/images/baby_yoda_compressed.JPG" alt="Grogu with css only">
-    <img src="assets/images/Blackjack_compressed.JPG" alt="21 blackjack game with javascript">
+    <h1>Titulo</h1>
 </body>
 </html>
