--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,23 @@
     <script src="assets/js/config.js"></script>
 </head>
 <body>
-    <h1>Titulo</h1>
+    <div class="loading">
+        <div class="loading__box">
+            <div class="loading__text">
+                <div class="loading__text--border"></div>
+                L 
+                <div class="loading__text--dot"></div>
+                OADING EXPERIENCE   
+            </div>
+            <div class="loading__bar">
+                <div class="loading__bar--inner"></div>
+            </div>
+            <div class="loading__counter">
+                <span>0%</span>
+                <div class="loading__counter--number">100%</div>
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
