--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     <div class="loading">
         <div class="loading__box">
             <div class="loading__text">
-                <div class="loading__text--border"></div>
+                <div class="loading__text--border loading__width_animation"></div>
                 L 
                 <div class="loading__text--dot"></div>
                 OADING EXPERIENCE   
@@ -54,7 +54,7 @@
                 <div class="loading__counter--number">100%</div>
             </div>
         </div>
-        
     </div>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
