--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
 <body>
     <div class="loading">
         <div class="loading__box">
+            <img src="assets/images/loader15.svg" alt="" class="loading__svg">
             <div class="loading__text">
                 <div class="loading__text--border loading__width_animation"></div>
                 L 
@@ -51,7 +52,7 @@
             </div>
             <div class="loading__counter">
                 <span>0%</span>
-                <div class="loading__counter--number">100%</div>
+                <div class="loading__counter--number">0%</div>
             </div>
         </div>
     </div>
