--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
     <script src="assets/js/config.js"></script>
 </head>
 <body>
+    <!-- Loading -->
     <div class="loading">
         <div class="loading__box">
             <img src="assets/images/loader15.svg" alt="" class="loading__svg">
@@ -55,6 +56,28 @@
                 <div class="loading__counter--number">0%</div>
             </div>
         </div>
+    </div>
+    <!-- Landing -->
+    <div class="landing">
+        <!-- Header -->
+        <header class="header">
+            <div class="header__wrap">
+                <ul class="header__left">
+                    <li><a href="#"><span>Home</span></a></li>
+                    <li><a href="#"><span>Reviews</span></a></li>
+                    <li><a href="#"><span>Projects</span></a></li>
+                    <li><a href="#"><span>Insights</span></a></li>
+                    <li><a href="#"><span>Faq</span></a></li>
+
+                </ul>
+                <div class="header__rigth">
+                    <button>Contact</button>
+                </div>
+            </div>
+        </header>
+
+
+
     </div>
     <script src="assets/js/app.js"></script>
 </body>
