--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,9 @@
     </div>
     <!-- Landing -->
     <div class="landing">
+        <div class="centered_link">
+            <a href="" class="coolLink" data-text="COOL LINK"><span>COOL LINK</span></a>
+        </div>
         <!-- Header -->
         <header class="header">
             <div class="header__wrap">
