--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
     <meta name="msapplication-TileImage" content="assets/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- Favicon -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <script src="assets/js/config.js"></script>
 </head>
 <body>
@@ -75,9 +76,21 @@
                 </div>
             </div>
         </header>
-
-
-
+        <!-- Social -->
+        <div class="socials">
+            <a href="" target="_blank">
+                <i class="uil uil-linkedin coloredIcon"></i>
+            </a>
+            <a href="" target="_blank">
+                <i class="uil uil-github coloredIcon"></i>
+            </a>
+            <a href="" target="_blank">
+                <i class="uil uil-youtube coloredIcon"></i>
+            </a>
+            <a href="" target="_blank">
+                <i class="uil uil-instagram coloredIcon"></i>
+            </a>
+        </div>
     </div>
     <script src="assets/js/app.js"></script>
 </body>
