Intro, intro responsive, seccion habilidades, animación de habilidades

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,12 @@
                 </div>
             </div>
         </header>
+        <!-- Intro -->
+        <div class="intro">
+            <h4>Hello 🙋‍♂️, I am</h4>
+            <h1 class="intro__name">Christian Roberto</h1>
+            <h1>Front-end Developer 🚀</h1>
+        </div>
         <!-- Social -->
         <div class="socials">
             <a href="" target="_blank">
@@ -104,6 +110,16 @@
             </div>
         </div>
     </div>
+    <!-- Skills -->
+    <section class="skills">
+        <div class="skills__header">my expertise</div>
+            <div class="skills__text skills__text--left">
+                WEB DEVELOPER &nbsp;&nbsp;&nbsp; FRONT-END &nbsp;&nbsp;&nbsp; BACK-END &nbsp;&nbsp;&nbsp; ENGINEERING MANAGEMENT &nbsp;&nbsp;&nbsp; SCRUM &nbsp;&nbsp;&nbsp; MARKETING &nbsp;&nbsp;&nbsp; COPYWRITING &nbsp;&nbsp;&nbsp; ECOMMERCE &nbsp;&nbsp;&nbsp; BUSINESS MODELS &nbsp;&nbsp;&nbsp;
+            </div>
+            <div class="skills__text skills__text--right">
+                HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JAVASCRIPT &nbsp;&nbsp;&nbsp; WEBPACK &nbsp;&nbsp;&nbsp; MONGODB &nbsp;&nbsp; EXPRESS &nbsp;&nbsp;&nbsp; REACT &nbsp;&nbsp;&nbsp; NODE &nbsp;&nbsp;&nbsp; NEXT JS &nbsp;&nbsp;&nbsp;  GSAP &nbsp;&nbsp;&nbsp; THREE JS &nbsp;&nbsp;&nbsp; MYSQL &nbsp;&nbsp;&nbsp;  &nbsp;  TAILWIND CSS &nbsp;&nbsp;&nbsp; GITHUB &nbsp;&nbsp;&nbsp; ADOBE XD &nbsp;&nbsp;&nbsp; WOOCOMMERCE &nbsp;&nbsp;&nbsp; FACEBOOK ADS &nbsp;&nbsp;&nbsp;  SHOPIFY &nbsp;&nbsp;&nbsp; PROGRESS WEB APLICATION &nbsp;&nbsp;&nbsp;
+            </div>
+    </section>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
