--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,36 @@
                 HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JAVASCRIPT &nbsp;&nbsp;&nbsp; WEBPACK &nbsp;&nbsp;&nbsp; MONGODB &nbsp;&nbsp; EXPRESS &nbsp;&nbsp;&nbsp; REACT &nbsp;&nbsp;&nbsp; NODE &nbsp;&nbsp;&nbsp; NEXT JS &nbsp;&nbsp;&nbsp;  GSAP &nbsp;&nbsp;&nbsp; THREE JS &nbsp;&nbsp;&nbsp; MYSQL &nbsp;&nbsp;&nbsp;  &nbsp;  TAILWIND CSS &nbsp;&nbsp;&nbsp; GITHUB &nbsp;&nbsp;&nbsp; ADOBE XD &nbsp;&nbsp;&nbsp; WOOCOMMERCE &nbsp;&nbsp;&nbsp; FACEBOOK ADS &nbsp;&nbsp;&nbsp;  SHOPIFY &nbsp;&nbsp;&nbsp; PROGRESS WEB APLICATION &nbsp;&nbsp;&nbsp;
             </div>
     </section>
+    <!-- Reviews -->
+    <section class="reviews section">
+        <div class="reviews__headers">
+            <div class="instructor">
+                <div class="instructor__curve"></div>
+                    <div class="instructor__infos">
+                        <img src="./assets/images/me.png" alt="" class="instructor__img">
+                        <div class="instructor__col">
+                            <div class="instructor__info">
+                                <img src="./assets/images/five_pointed_star.svg" alt="">
+                                <span>4.9 / 5.0 Instructor rating</span>
+                            </div>
+                            <div class="instructor__info">
+                                <img src="./assets/images/Button---Review.svg" alt="">
+                                <span>100 + 5 star reviews</span>
+                            </div>
+                            <div class="instructor__info">
+                                <img src="./assets/images/abstract_group.svg" alt="">
+                                <span>1k+ students</span>
+                            </div>
+                            <div class="instructor__info">
+                                <img src="./assets/images/web.png" alt="">
+                                <span>Major curses</span>
+                            </div>
+                        </div>
+                    </div>
+                
+            </div>
+        </div>
+    </section>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
