--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
             </div>
     </section>
     <!-- Reviews -->
-    <section class="reviews section">
+    <div class="reviews section">
         <div class="reviews__headers">
             <div class="instructor">
                 <div class="instructor__curve"></div>
@@ -152,13 +152,24 @@
         <!-- Swiper -->
         <div class="swiper__wrapper">
             <div class="swiper">
-                <div class="swiper-wrapper">
-                
+                <div class="swiper-wrapper"></div>
+            </div>
+            <div class="swiper__tools">
+                <div class="swiper__buttons">
+                    <button class="swiper-button-prev">
+                        <img src="./assets/images/leftArrow.png" alt="">
+                    </button>
+                    <button class="swiper-button-next">
+                        <img src="./assets/images/rightArrow.png" alt="">
+                    </button>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
         </div>
-    </section>
+    </div>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
+
+
+
