--- a/src/index.html
+++ b/src/index.html
@@ -167,6 +167,31 @@
             </div>
         </div>
     </div>
+    <!-- Projects -->
+    <section class="section projects">
+        <h1 class="projects__header">Some of my work</h1>
+        <div class="project">
+            <div class="project__header">
+                <span>1/8</span>
+                <span>Feb 2022</span>
+            </div>
+            <div class="project__infos">
+                <h1 class="project__infos--name">
+                    Facebook Clone <span> (Full Stack)</span>
+                </h1>
+            </div>
+            <div class="project__img">
+                <img src="./assets/images/baby_yoda_compressed.JPG" alt="">
+                <div class="project__links">
+                    <a href="#" target="_blank">
+                        <button class="coolButton">
+                            <span>Github</span>
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
