--- a/src/index.html
+++ b/src/index.html
@@ -338,8 +338,46 @@
                     <p>This is completely depends on what you need. It takes longer to build a 1000 page megasite than a smaller eight page brochure website</p>
                 </div>
             </div>
+
         </div>
     </div>
+    <!-- Contact -->
+    <section class="section contact">
+        <div class="contact__wrapper">
+            <div class="contact__header">
+                <div class="section__header-title">/Contact</div>
+                <div class="section__header-subtitle">Get in touch</div>
+            </div>
+            <div class="contact__form">
+                <form action="#" class="form">
+                    <div class="form__flex">
+                        <div class="form__info">
+                            <label>Hey, My name is</label>
+                            <input type="text" placeholder="Type Here">
+                        </div>
+                        <div class="form__info">
+                            <label>I´m looking for </label>
+                            <input type="text" placeholder="Type of service">
+                        </div>
+                    </div>
+                    <div class="form__flex">
+                        <div class="form__info">
+                            <label>Get in touch me at</label>
+                            <input type="text" placeholder="Your Email id here">
+                        </div>
+                    </div>
+                    <div class="form__flex">
+                            <textarea placeholder="Your message"></textarea>
+                    </div>
+                    <div class="form__flex">
+                        <button class="coolButton">
+                            <span>Send <i class="uil uil-message"></i> </span>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
