--- a/src/index.html
+++ b/src/index.html
@@ -447,8 +447,8 @@
                 <div class="contact__profile-item"></div>
             </div>
             <div class="contact__socials">
-                <a href="#" title="HTML" class="coolFunnyLink">
-                    <span>HTML</span>
+                <a class="coolFunnyLink" href="https://www.linkedin.com/in/christian-roberto-garc%C3%ADa-71298492/" target="_blank">
+                    <span>LINKEDIN</span>
                     <svg width="100%" height="9" viewBox="0 0 101 9">
                         <path
                           d="M.426 1.973C4.144 1.567 17.77-.514 21.443 1.48 24.296 3.026 24.844 4.627 27.5 7c3.075 2.748 6.642-4.141 10.066-4.688 7.517-1.2 13.237 5.425 17.59 2.745C58.5 3 60.464-1.786 66 2c1.996 1.365 3.174 3.737 5.286 4.41 5.423 1.727 25.34-7.981 29.14-1.294"
@@ -458,8 +458,8 @@
                         />
                     </svg>
                 </a>
-                <a href="#" title="HTML" class="coolFunnyLink">
-                    <span>HTML</span>
+                <a class="coolFunnyLink" href="https://github.com/christianrgg" target="_blank">
+                    <span>GITHUB</span>
                     <svg width="100%" height="9" viewBox="0 0 101 9">
                         <path
                           d="M.426 1.973C4.144 1.567 17.77-.514 21.443 1.48 24.296 3.026 24.844 4.627 27.5 7c3.075 2.748 6.642-4.141 10.066-4.688 7.517-1.2 13.237 5.425 17.59 2.745C58.5 3 60.464-1.786 66 2c1.996 1.365 3.174 3.737 5.286 4.41 5.423 1.727 25.34-7.981 29.14-1.294"
@@ -469,8 +469,8 @@
                         />
                     </svg>
                 </a>
-                <a href="#" title="HTML" class="coolFunnyLink">
-                    <span>HTML</span>
+                <a class="coolFunnyLink" href="https://github.com/christianrgg" target="_blank">
+                    <span>INSTAGRAM</span>
                     <svg width="100%" height="9" viewBox="0 0 101 9">
                         <path
                           d="M.426 1.973C4.144 1.567 17.77-.514 21.443 1.48 24.296 3.026 24.844 4.627 27.5 7c3.075 2.748 6.642-4.141 10.066-4.688 7.517-1.2 13.237 5.425 17.59 2.745C58.5 3 60.464-1.786 66 2c1.996 1.365 3.174 3.737 5.286 4.41 5.423 1.727 25.34-7.981 29.14-1.294"
@@ -480,6 +480,12 @@
                         />
                     </svg>
                 </a>
+                
+            </div>
+            <div class="contact__footer">
+                <div class="contact__footer-link">CHRISTIAN INC</div>  
+                <div class="contact__footer-link">COPYRIGHT © 2023</div>  
+                <div class="contact__footer-link"> <b>DON´T FORGET TO DRINK WATER</b> 🙏</div>  
             </div>
         </div>
     </section>
