Información de desarrollador, iconos y fotografia

--- a/src/index.html
+++ b/src/index.html
@@ -126,23 +126,23 @@
             <div class="instructor">
                 <div class="instructor__curve"></div>
                     <div class="instructor__infos">
-                        <img src="./assets/images/me.png" alt="" class="instructor__img">
+                        <img src="./assets/images/me3.jpg" alt="" class="instructor__img">
                         <div class="instructor__col">
                             <div class="instructor__info">
-                                <img src="./assets/images/five_pointed_star.svg" alt="">
-                                <span>4.9 / 5.0 Instructor rating</span>
+                                <img src="./assets/images/titulo-universitario.png" alt="">
+                                <span>Bussines Managment Engineering</span>
                             </div>
                             <div class="instructor__info">
-                                <img src="./assets/images/Button---Review.svg" alt="">
-                                <span>100 + 5 star reviews</span>
+                                <img src="./assets/images/caracteristica.png" alt="">
+                                <span>MongoDB, Express, React, Node</span>
                             </div>
                             <div class="instructor__info">
-                                <img src="./assets/images/abstract_group.svg" alt="">
-                                <span>1k+ students</span>
+                                <img src="./assets/images/horas-laborales.png" alt="">
+                                <span>1 year of experience</span>
                             </div>
                             <div class="instructor__info">
                                 <img src="./assets/images/web.png" alt="">
-                                <span>Major curses</span>
+                                <span> 20+ completed projects</span>
                             </div>
                         </div>
                     </div>
@@ -378,7 +378,7 @@
             </div>
             <div class="contact__profile">
                 <div class="contact__profile-item">
-                    <img src="assets/images/me.png" alt="Christian Roberto">
+                    <img src="assets/images/me3.jpg" alt="Christian Roberto">
                     <div class="contact__profile-col">
                         <b>CHRISTIAN</b>
                         <span>Web Developer</span>
