Imagen prototipo de projects, enlaces y footer

--- a/src/index.html
+++ b/src/index.html
@@ -84,16 +84,16 @@
         </div>
         <!-- Social -->
         <div class="socials">
-            <a href="" target="_blank">
+            <a href="https://www.linkedin.com/in/christian-roberto-garc%C3%ADa-71298492/" target="_blank">
                 <i class="uil uil-linkedin coloredIcon"></i>
             </a>
-            <a href="" target="_blank">
+            <a href="https://github.com/christianrgg" target="_blank">
                 <i class="uil uil-github coloredIcon"></i>
             </a>
-            <a href="" target="_blank">
+            <!-- <a href="" target="_blank">
                 <i class="uil uil-youtube coloredIcon"></i>
-            </a>
-            <a href="" target="_blank">
+            </a> -->
+            <a href="https://www.instagram.com/christian_roberto_g/" target="_blank">
                 <i class="uil uil-instagram coloredIcon"></i>
             </a>
         </div>
@@ -181,7 +181,7 @@
                 </h1>
             </div>
             <div class="project__img">
-                <img src="./assets/images/baby_yoda_compressed.JPG" alt="Baby yoda CSS">
+                <img src="./assets/images/responsive.png" alt="Baby yoda CSS">
                 <div class="project__links">
                     <a href="#" title="Baby Yoda" target="_blank">
                         <button class="coolButton">
@@ -419,12 +419,12 @@
                         <span>Web Developer</span>
                     </div>
                 </div>
-                <div class="contact__profile-item">
+                <!-- <div class="contact__profile-item">
                     <div class="contact__profile-col">
                         <span>christian@gmail.com</span>
                         <span>christian@outlook.com</span>
                     </div>
-                </div>
+                </div> -->
                 <div class="contact__profile-item">
                     <div class="contact__profile-col">
                         <span>Yucatán</span>
@@ -435,7 +435,7 @@
                     <div class="contact__profile-bg"></div>
                     <div class="contact__profile-col">
                         <span>Get in touch</span>
-                        <b>christiang@gmail.com</b>
+                        <b>christian.roberto.g@gmail.com</b>
                     </div>
                 </div>
                 <a class="coolCircleEyeButton">
@@ -479,7 +479,7 @@
                         <circle class="eye__inner" cx="35" cy="35.31" r="10.041" />
                     </svg>
                 </a>
-                <div class="contact__profile-item"></div>
+                <!-- <div class="contact__profile-item"></div> -->
             </div>
             <div class="contact__socials">
                 <a class="coolFunnyLink" href="https://www.linkedin.com/in/christian-roberto-garc%C3%ADa-71298492/" target="_blank">
@@ -504,7 +504,7 @@
                         />
                     </svg>
                 </a>
-                <a class="coolFunnyLink" href="https://github.com/christianrgg" target="_blank">
+                <a class="coolFunnyLink" href="https://www.instagram.com/christian_roberto_g/" target="_blank">
                     <span>INSTAGRAM</span>
                     <svg width="100%" height="9" viewBox="0 0 101 9">
                         <path
